--- a/frontends/cloud/cloud.html
+++ b/frontends/cloud/cloud.html
@@ -8,15 +8,30 @@
       body { font-family: "Segoe UI", sans-serif; margin:0; background:#0f172a; color:#e2e8f0; }
       header { padding: 16px 24px; background:#0b1220; }
       main { padding: 24px; max-width: 960px; margin:auto; }
-      .card { background: #111827; border: 1px solid #1e293b; border-radius: 12px; padding: 16px 20px; margin-bottom: 16px; box-shadow: 0 10px 24px rgba(0,0,0,0.35); }
-      input, button { padding: 8px 10px; font-size: 14px; border-radius: 8px; border: 1px solid #1e293b; }
+      .card {
+        background: #111827;
+        border: 1px solid #1e293b;
+        border-radius: 12px;
+        padding: 16px 20px;
+        margin-bottom: 16px;
+        box-shadow: 0 10px 24px rgba(0,0,0,0.35);
+      }
+      input, button {
+        padding: 8px 10px;
+        font-size: 14px;
+        border-radius: 8px;
+        border: 1px solid #1e293b;
+      }
       input { background:#0b1220; color:#e2e8f0; }
       button { background:#10b981; color:#0b1220; border:none; cursor:pointer; }
       button.secondary { background:#22d3ee; }
       button:disabled { opacity:0.6; cursor: not-allowed; }
-      .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:12px; }
-      ul { list-style:none; padding:0; }
+      ul { list-style:none; padding:0; margin-top:12px; }
       li { padding:8px 0; border-bottom:1px dashed #1e293b; }
+      .meta-line { font-size:12px; color:#94a3b8; margin-top:2px; }
+      .ops-line { margin-top:4px; }
+      .tag-encrypted { color:#f97316; font-size:12px; margin-left:6px; }
+      .tag-binary { color:#38bdf8; font-size:11px; margin-left:6px; }
     </style>
   </head>
   <body>
@@ -24,78 +39,226 @@
       <h2>云盘站点 · OAuth2.0 SSO</h2>
     </header>
     <main id="app">
+      <!-- 登录卡片 -->
       <div class="card">
         <h3>登录 & 授权</h3>
         <p>当前状态：{{ loggedIn ? "已登录" : "未登录" }}</p>
+        <p v-if="username">当前用户：{{ username }}</p>
         <button class="secondary" @click="goLogin">前往统一认证（302）</button>
         <button @click="logout">退出</button>
       </div>
 
+      <!-- 云盘卡片 -->
       <div class="card">
-        <h3>云盘文件</h3>
-        <div style="display:flex; gap:12px; flex-wrap:wrap;">
-          <button @click="listFiles" :disabled="!loggedIn || loading">列出文件</button>
-          <button @click="uploadFile" :disabled="!loggedIn || loading">模拟上传</button>
-          <button @click="logout">清除令牌</button>
+        <h3>云盘文件（模拟 + 实际上传）</h3>
+
+        <!-- 操作区 -->
+        <div style="display:flex; flex-direction:column; gap:8px; margin-bottom:12px;">
+          <div style="display:flex; gap:8px; flex-wrap:wrap;">
+            <button @click="listFiles" :disabled="!loggedIn || loading">列出文件</button>
+            <button @click="uploadDemo" :disabled="!loggedIn || loading">模拟上传元数据</button>
+          </div>
+          <div style="display:flex; gap:8px; flex-wrap:wrap; align-items:center;">
+            <input type="file" @change="onFileChange" />
+            <span style="font-size:12px; color:#94a3b8;">
+              {{ realFileName || "未选择文件" }}
+            </span>
+            <button @click="uploadReal" :disabled="!loggedIn || loading || !realFile">
+              上传真实文件
+            </button>
+          </div>
         </div>
-        <ul>
-          <li v-for="f in files" :key="f.name">
-            {{ f.name }} — {{ f.size }} — {{ f.uploaded_at }}
+
+        <p v-if="!files.length" class="meta-line">
+          当前暂无文件，可先点击“模拟上传元数据”或选择文件后“上传真实文件”。
+        </p>
+
+        <ul v-else>
+          <li v-for="f in files" :key="f.id || f.name">
+            <div>
+              <strong>{{ f.name }}</strong>
+              — {{ f.size }} — {{ f.uploaded_at }}
+              <span v-if="f.is_binary" class="tag-binary">[真实文件]</span>
+              <span v-if="f.encrypted" class="tag-encrypted">[加密分享]</span>
+            </div>
+            <div class="meta-line">
+              <span v-if="f.share_token">
+                分享：{{ shareUrlFor(f) }}
+                <span v-if="f.share_expires_at"> · 有效期至 {{ f.share_expires_at }}</span>
+                <span v-if="f.share_password"> · 密码：{{ f.share_password }}</span>
+              </span>
+              <span v-else>尚未设置分享</span>
+            </div>
+            <div class="ops-line">
+              <button @click="shareFile(f)" :disabled="!loggedIn || loading">
+                设置 / 更新分享
+              </button>
+              <button
+                v-if="f.is_binary"
+                @click="downloadFile(f)"
+                :disabled="!loggedIn || loading"
+              >
+                下载
+              </button>
+            </div>
           </li>
         </ul>
       </div>
     </main>
 
     <script>
-          const { createApp } = Vue;
-          createApp({
-            data() {
-              return {
-                authBase: "https://auth.localhost:5000",
-                apiBase: "https://cloud.localhost:5002",
-                loggedIn: false,
-                files: [],
-                loading: false,
-              };
-            },
-            mounted() {
-              this.checkStatus();
-            },
-            methods: {
-              goLogin() {
-                window.location.href = `${this.apiBase}/session/login`;
-              },
-              async checkStatus() {
-                const res = await fetch(`${this.apiBase}/session/status`, { credentials: "include" });
-                this.loggedIn = res.ok;
-              },
-              async listFiles() {
-                if (!this.loggedIn) { alert("请先登录"); return; }
-                const res = await fetch(`${this.apiBase}/files`, {
-                  credentials: "include",
-                });
-                const data = await res.json();
-                if (!res.ok) { alert(JSON.stringify(data)); return; }
-                this.files = data.files || [];
-              },
-              async uploadFile() {
-                if (!this.loggedIn) { alert("请先登录"); return; }
-                const res = await fetch(`${this.apiBase}/files`, {
-                  method: "POST",
-                  headers: { "Content-Type": "application/json" },
-                  credentials: "include",
-                  body: JSON.stringify({ name: `report-${Date.now()}.pdf`, size: "4KB" }),
-                });
-                const data = await res.json();
-                if (!res.ok) { alert(JSON.stringify(data)); return; }
-                this.files = data.files || [];
-              },
-              logout() {
-                fetch(`${this.apiBase}/session/logout`, { method: "POST", credentials: "include" });
-                this.loggedIn = false;
-              },
-            },
-          }).mount("#app");
+      const { createApp } = Vue;
+      createApp({
+        data() {
+          return {
+            authBase: "https://auth.localhost:5000",
+            apiBase: "https://cloud.localhost:5002",
+            loggedIn: false,
+            username: null,
+            files: [],
+            loading: false,
+            realFile: null,
+            realFileName: "",
+          };
+        },
+        mounted() {
+          this.checkStatus();
+        },
+        methods: {
+          goLogin() {
+            window.location.href = `${this.apiBase}/session/login`;
+          },
+          async checkStatus() {
+            try {
+              const res = await fetch(`${this.apiBase}/session/status`, { credentials: "include" });
+              this.loggedIn = res.ok;
+            } catch (e) {
+              console.error(e);
+              this.loggedIn = false;
+            }
+          },
+          async listFiles() {
+            if (!this.loggedIn) { alert("请先登录"); return; }
+            this.loading = true;
+            try {
+              const res = await fetch(`${this.apiBase}/files`, { credentials: "include" });
+              const data = await res.json();
+              if (!res.ok) { alert(JSON.stringify(data)); return; }
+              this.files = data.files || [];
+              this.username = data.user || null;
+            } catch (e) {
+              console.error(e);
+              alert("请求失败");
+            } finally {
+              this.loading = false;
+            }
+          },
+          async uploadDemo() {
+            if (!this.loggedIn) { alert("请先登录"); return; }
+            this.loading = true;
+            try {
+              const res = await fetch(`${this.apiBase}/files`, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                credentials: "include",
+                body: JSON.stringify({
+                  name: `report-${Date.now()}.pdf`,
+                  size: "4KB"
+                }),
+              });
+              const data = await res.json();
+              if (!res.ok) { alert(JSON.stringify(data)); return; }
+              this.files = data.files || [];
+              this.username = data.user || null;
+            } catch (e) {
+              console.error(e);
+              alert("上传失败");
+            } finally {
+              this.loading = false;
+            }
+          },
+          onFileChange(e) {
+            const file = e.target.files[0];
+            this.realFile = file || null;
+            this.realFileName = file ? file.name : "";
+          },
+          async uploadReal() {
+            if (!this.loggedIn) { alert("请先登录"); return; }
+            if (!this.realFile) { alert("请先选择文件"); return; }
+            this.loading = true;
+            try {
+              const form = new FormData();
+              form.append("file", this.realFile);
+              const res = await fetch(`${this.apiBase}/files/upload`, {
+                method: "POST",
+                body: form,
+                credentials: "include",
+              });
+              const data = await res.json();
+              if (!res.ok) { alert(JSON.stringify(data)); return; }
+              this.files = data.files || [];
+              this.username = data.user || null;
+              this.realFile = null;
+              this.realFileName = "";
+            } catch (e) {
+              console.error(e);
+              alert("真实文件上传失败");
+            } finally {
+              this.loading = false;
+            }
+          },
+          downloadFile(file) {
+            if (!file.id) {
+              alert("缺少文件 id，无法下载");
+              return;
+            }
+            const url = `${this.apiBase}/files/download/${encodeURIComponent(file.id)}`;
+            window.open(url, "_blank");
+          },
+          logout() {
+            fetch(`${this.apiBase}/session/logout`, { method: "POST", credentials: "include" });
+            this.loggedIn = false;
+            this.username = null;
+            this.files = [];
+          },
+          shareUrlFor(f) {
+            if (!f.share_token) return "";
+            return `${this.apiBase}/share/${f.share_token}`;
+          },
+          async shareFile(file) {
+            if (!this.loggedIn) { alert("请先登录"); return; }
+            const expireInput = window.prompt("请输入分享有效期（小时）", "24");
+            if (expireInput === null) return;
+            const expireHours = parseInt(expireInput || "24", 10) || 24;
+            const pwd = window.prompt("访问密码（可选，加密分享）", file.share_password || "");
+            this.loading = true;
+            try {
+              const res = await fetch(`${this.apiBase}/files/share`, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                credentials: "include",
+                body: JSON.stringify({
+                  file_id: file.id,
+                  expire_hours: expireHours,
+                  password: pwd || null,
+                }),
+              });
+              const data = await res.json();
+              if (!res.ok) { alert(JSON.stringify(data)); return; }
+              await this.listFiles();
+              alert(
+                `分享创建成功\n链接: ${data.share_url}\n` +
+                (data.need_password ? "密码: " + (pwd || "") : "无密码")
+              );
+            } catch (e) {
+              console.error(e);
+              alert("创建分享失败");
+            } finally {
+              this.loading = false;
+            }
+          },
+        },
+      }).mount("#app");
     </script>
   </body>
 </html>
