--- a/frontends/cloud/cloud.html
+++ b/frontends/cloud/cloud.html
@@ -215,8 +215,14 @@
             const url = `${this.apiBase}/files/download/${encodeURIComponent(file.id)}`;
             window.open(url, "_blank");
           },
-          logout() {
-            fetch(`${this.apiBase}/session/logout`, { method: "POST", credentials: "include" });
+          async logout() {
+            await fetch(`${this.apiBase}/session/logout`, { method: "POST", credentials: "include" });
+            // 同时让统一认证门户清除 sso_session，避免跨站点仍保持登录
+            try {
+              await fetch(`${this.authBase}/auth/logout`, { method: "POST", credentials: "include" });
+            } catch (_) {
+              // 忽略门户不可达等错误，前端仍继续清理本地状态
+            }
             this.loggedIn = false;
             this.username = null;
             this.files = [];
