改善"选择文件"按钮样式

--- a/frontends/cloud/cloud.html
+++ b/frontends/cloud/cloud.html
@@ -271,6 +271,8 @@
         transition: all var(--transition-speed) ease;
         min-width: 200px;
         text-align: center;
+        max-width: 100%;
+        box-sizing: border-box;
       }
 
       .file-input-label:hover {
